Checkpoint after Deleting Budget

--- a/landing/templates/landing/budget.html
+++ b/landing/templates/landing/budget.html
@@ -42,7 +42,7 @@
                 <li class="breadcrumb-item active"> <i class="fa fa-balance-scale"></i> Budget </li>
             </ol>
 
-
+            {% load django_tables2 %}{% render_table table %}
 
 
         </div>
