Push before Python Anywhere

--- a/landing/templates/landing/base.html
+++ b/landing/templates/landing/base.html
@@ -28,11 +28,11 @@
     <link href="/static/css/map.css" rel="stylesheet" type="text/css">
 
     <script src="/static/js/highmaps.js"></script>
-    <script src="/static/js/exporting.js"></script>
+    <script src="/static/js/exporting.js"></script> 
     <script src="/static/js/ug-all.js"></script> 
 
     <!-- Stylesheet for budget -->
-    <link rel="stylesheet" href="{% static 'django_tables2/themes/paleblue/css/screen.css' %}" />
+    <link href="{% static 'django_tables2/themes/paleblue/css/screen.css' %}" rel="stylesheet" type="text/css"/>
 
   </head>
   <body id="page-top">
