--- a/landing/templates/landing/budgets.html
+++ b/landing/templates/landing/budgets.html
@@ -13,7 +13,7 @@
                     <a class="nav-link" href="{% url 'index' %}"><i class="fa fa-home"></i> Home</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'budget' %}"><i class="fa fa-balance-scale"></i> Budget</a>
+                    <a class="nav-link" href="{% url 'budgets' %}"><i class="fa fa-balance-scale"></i> Budget</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'projects' %}"><i class="fa fa-tasks"></i> Projects</a>
@@ -42,7 +42,7 @@
                 <li class="breadcrumb-item active"> <i class="fa fa-balance-scale"></i> Budget </li>
             </ol>
 
-            {% load django_tables2 %}{% render_table table %}
+                    {% load django_tables2 %} {%render_table table %}
 
 
         </div>
