--- a/landing/templates/landing/predict.html
+++ b/landing/templates/landing/predict.html
@@ -13,7 +13,7 @@
                     <a class="nav-link" href="{% url 'index' %}"><i class="fa fa-home"></i> Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'budget' %}"><i class="fa fa-balance-scale"></i> Budget</a>
+                    <a class="nav-link" href="{% url 'budgets' %}"><i class="fa fa-balance-scale"></i> Budget</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'projects' %}"><i class="fa fa-tasks"></i> Projects</a>
