--- a/landing/templates/landing/base.html
+++ b/landing/templates/landing/base.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
   <head>
+    {% load render_table from django_tables2 %}
     {% load static %}
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -27,8 +28,11 @@
     <link href="/static/css/map.css" rel="stylesheet" type="text/css">
 
     <script src="/static/js/highmaps.js"></script>
-    <script src="/static/js/exporting.js"></script>
+    <script src="/static/js/exporting.js"></script> 
     <script src="/static/js/ug-all.js"></script> 
+
+    <!-- Stylesheet for budget -->
+    <link href="{% static 'django_tables2/themes/paleblue/css/screen.css' %}" rel="stylesheet" type="text/css"/>
 
   </head>
   <body id="page-top">
