--- a/landing/templates/landing/budgets.html
+++ b/landing/templates/landing/budgets.html
@@ -12,13 +12,13 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'index' %}"><i class="fa fa-home"></i> Home</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="{% url 'budgets' %}"><i class="fa fa-balance-scale"></i> Budget</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'projects' %}"><i class="fa fa-tasks"></i> Projects</a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'compare' %}"><i class="fa fa-pie-chart" aria-hidden="true"></i> Comparative Analytics </a>
                 </li>
                 <li class="nav-item">
@@ -39,10 +39,10 @@
             <!-- Breadcrumbs -->
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="{% url 'index' %}"><i class="fa fa-home"></i> Home </a></li>
-                <li class="breadcrumb-item active"> <i class="fa fa-pie-chart"></i> Comparative Analytics </li>
+                <li class="breadcrumb-item active"> <i class="fa fa-balance-scale"></i> Budget </li>
             </ol>
 
-
+                    {% load django_tables2 %} {%render_table table %}
 
 
         </div>
