--- a/landing/templates/landing/budgets.html
+++ b/landing/templates/landing/budgets.html
@@ -41,13 +41,13 @@
             <li class="breadcrumb-item active"> <i class="fa fa-balance-scale"></i> Budget </li>
         </ol>
 
-        {% load django_tables2 %} {% render_table table %}
+        <!--{% load django_tables2 %} {% render_table table %}-->
         <div class="dropdown">
             <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">2017/2018
   <span class="caret"></span></button>
             <ul class="dropdown-menu">
-                <li><a href="{% url 'budgets' %}">Overview</a></li>
-                <li><a href="{% url 'july' %}">July</a></li>
+                <li><a href="#">Overview</a></li>
+                <li><a href="#">July</a></li>
                 <li><a href="#">August</a></li>
                 <li><a href="#">September</a></li>
                 <li><a href="#">October</a></li>
