This is about where it got messed up

--- a/landing/templates/landing/base.html
+++ b/landing/templates/landing/base.html
@@ -27,13 +27,17 @@
     <!--css for the map -->
     <link href="/static/css/map.css" rel="stylesheet" type="text/css">
 
+    <!--javascript for the map -->
     <script src="/static/js/highmaps.js"></script>
     <script src="/static/js/exporting.js"></script> 
     <script src="/static/js/ug-all.js"></script> 
 
     <!-- Stylesheet for budget -->
     <link href="{% static 'django_tables2/themes/paleblue/css/screen.css' %}" rel="stylesheet" type="text/css"/>
-
+    
+    
+    <!-- Javascript for charts -->
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   </head>
   <body id="page-top">
     {% block content %}
