Checkpoint Monday 10:30 am

--- a/landing/templates/landing/base.html
+++ b/landing/templates/landing/base.html
@@ -37,7 +37,8 @@
     
     
     <!-- Javascript for charts -->
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="/static/js/loader.js"></script>
+    <script src="/static/js/budget.js"></script>
   </head>
   <body id="page-top">
     {% block content %}
