--- a/landing/templates/landing/index.html
+++ b/landing/templates/landing/index.html
@@ -38,7 +38,7 @@
                 <a class="nav-link" href="{% url 'compare' %}"><i class="fa fa-pie-chart" aria-hidden="true"></i> Comparative Analytics </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'predict' %}"><i class="fa fa-line-chart" aria-hidden="true"></i> Predictive Analytics </a>
+                <a class="nav-link" href="{% url 'predict' %}"><i class="fa fa-space-shuttle" aria-hidden="true"></i> Predictive Analytics </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'export' %}"><i class="fa fa-download" aria-hidden="true"></i> View and Export </a>
