--- a/landing/templates/landing/predict.html
+++ b/landing/templates/landing/predict.html
@@ -41,7 +41,7 @@
                 <a class="nav-link" href="{% url 'compare' %}"><i class="fa fa-pie-chart" aria-hidden="true"></i> Comparative Analytics </a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="{% url 'predict' %}"><i class="fa fa-line-chart" aria-hidden="true"></i> Predictive Analytics </a>
+                <a class="nav-link" href="{% url 'predict' %}"><i class="fa fa-space-shuttle" aria-hidden="true"></i> Predictive Analytics </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'export' %}"><i class="fa fa-download" aria-hidden="true"></i> View and Export </a>
@@ -58,11 +58,8 @@
         <!-- Breadcrumbs -->
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="{% url 'index' %}"><i class="fa fa-home"></i> Home </a></li>
-            <li class="breadcrumb-item active"> <i class="fa fa-line-chart"></i> Predictive Analytics </li>
+            <li class="breadcrumb-item active"> <i class="fa fa-space-shuttle"></i> Predictive Analytics </li>
         </ol>
-
-
-
 
     </div>
     <!-- /.container-fluid -->
