--- a/landing/templates/landing/index.html
+++ b/landing/templates/landing/index.html
@@ -2,9 +2,9 @@
 <!-- Navigation -->
 <nav id="mainNav" class="navbar static-top navbar-toggleable-md navbar-inverse bg-inverse">
 
-    <a class="navbar-brand" href="{% url 'index' %}" style="margin-right:100px">Project & Budget Monitoring System</a>
-    <div class="collapse navbar-collapse" id="navbarExample">
-        <ul class="sidebar-nav navbar-nav">
+    <a class="navbar-brand" href="{% url 'index' %}" style="margin-right:100px">Project & Budget Monitoring System</a> 
+    <div class="collapse navbar-collapse">
+        <ul class="sidebar-nav navbar-nav" >
             <li class="nav-item active">
                 <a class="nav-link" href="{% url 'index' %}"><i class="fa fa-home"></i> Home</a>
             </li>
