--- a/landing/static/css/sb-admin.css
+++ b/landing/static/css/sb-admin.css
@@ -189,3 +189,6 @@ body.fixed-nav {
         text-align: center; }
     #mainNav .navbar-collapse .navbar-nav > .nav-item.dropdown .dropdown-menu > .dropdown-item > .dropdown-message {
       max-width: 300px; } }
+  div.box{
+    display:none;
+   }
