--- a/landing/templates/landing/budgets.html
+++ b/landing/templates/landing/budgets.html
@@ -21,7 +21,7 @@
                             <li><a href="{% url 'first' %}">First Quarter</a></li>
                             <li><a href="{% url 'second' %}">Second Quarter</a></li>
                             <li><a href="{% url 'third' %}">Third Quarter</a></li>
-                            <li><a href="#">Fourth Quarter</a></li>
+                            <li><a href="{% url 'fourth' %}">Fourth Quarter</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -52,12 +52,18 @@
             <li class="breadcrumb-item"><a href="{% url 'index' %}"><i class="fa fa-home"></i> Home </a></li>
             <li class="breadcrumb-item active"> <i class="fa fa-balance-scale"></i> Budget </li>
         </ol>
-
-        {% load django_tables2 %}{% render_table table %}
+        <div class="card mb-3" style="width: 99.5%;">
+            <div class="card-header">
+                <i class="fa fa-table"></i> Table showing the Annual Expenditure
+            </div>
+            <div class="card-block">
+                {% load django_tables2 %}{% render_table table %}
+            </div>
+        </div>
         <div><br></div>
         <div class="card mb-3" style="width: 99.5%;">
             <div class="card-header">
-                <i class="fa fa-pie-chart"></i> PieChart showing Annual Expenditure
+                <i class="fa fa-table"></i> PieChart showing Annual Expenditure
             </div>
             <div class="card-block">
                 <div id="piechart" style="height: 500px;"></div>
@@ -100,8 +106,8 @@
 <script src="/static/js/sb-admin.min.js"></script>
 
 {% comment %} Variable to store budget data{% endcomment %}
-<script> 
-var DOMAIN = "{{ site_domain }}";
+<script>
+    var DOMAIN = "{{ site_domain }}";
 </script>
 
 
