Created Divs for all months in the quarters

--- a/landing/templates/landing/Qfour.html
+++ b/landing/templates/landing/Qfour.html
@@ -50,22 +50,60 @@
         <!-- Breadcrumbs -->
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="{% url 'index' %}"><i class="fa fa-home"></i> Home </a></li>
-            <li class="breadcrumb-item active"> <i class="fa fa-balance-scale"></i> Budget </li>
+            <li class="breadcrumb-item"> <i class="fa fa-balance-scale"></i> Budget </li>
+            <li class="breadcrumb-item active"> <i class="fa fa-battery-full"></i> Q4 </li>
         </ol>
-        {% load django_tables2 %}{% render_table table %}
+        <div class="card mb-3" style="width: 99.5%;">
+            <div class="card-header">
+                <i class="fa fa-table"></i> Table showing Fourth Quarter 2017/2018
+            </div>
+            <div class="card-block">
+                {% load django_tables2 %}{% render_table table %}
+            </div>
+        </div>
         <div>
             <br>
         </div>
         <div class="dropdown">
-            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Fourth Quarter Months
-    <span class="caret"></span></button>
-            <ul class="dropdown-menu">
-                <li><a href="#">April</a></li>
-                <li><a href="#">May</a></li>
-                <li><a href="#">June</a></li>
+            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Fourth Quarter Months<span class="caret"></span></button>
+            <ul class="dropdown-menu" id='purpose'>
+                <li><a href="#" data-value="action1" id="April">April</a></li>
+                <li><a href="#" data-value="action2" id="May">May</a></li>
+                <li><a href="#" data-value="action3" id="June">June</a></li>
             </ul>
         </div>
+        <br>
+        <div class="April box">
+            <div class="card mb-3" style="width: 99.5%;">
+                <div class="card-header">
+                    <i class="fa fa-table"></i> Table showing April 2017/2018
+                </div>
+                <div class="card-block">
 
+                </div>
+            </div>
+        </div>
+
+        <div class="May box">
+            <div class="card mb-3" style="width: 99.5%;">
+                <div class="card-header">
+                    <i class="fa fa-table"></i> Table showing May 2017/2018
+                </div>
+                <div class="card-block">
+
+                </div>
+            </div>
+        </div>
+        <div class="June box">
+            <div class="card mb-3" style="width: 99.5%;">
+                <div class="card-header">
+                    <i class="fa fa-table"></i> Table showing June 2017/2018
+                </div>
+                <div class="card-block">
+
+                </div>
+            </div>
+        </div>
 
 
     </div>
@@ -91,6 +129,9 @@
 
 <!-- Custom scripts for this template -->
 <script src="/static/js/sb-admin.min.js"></script>
+
+<!--Script for switching -->
+<script src="/static/js/switcher.js"></script>
 
 
 {% endblock %}
