Enabled view of individualmonths for each quarter

--- a/landing/templates/landing/Qfour.html
+++ b/landing/templates/landing/Qfour.html
@@ -79,7 +79,7 @@
                     <i class="fa fa-table"></i> Table showing April 2017/2018
                 </div>
                 <div class="card-block">
-
+                    {% load django_tables2 %}{% render_table AprilTable %}
                 </div>
             </div>
         </div>
@@ -90,7 +90,7 @@
                     <i class="fa fa-table"></i> Table showing May 2017/2018
                 </div>
                 <div class="card-block">
-
+                    {% load django_tables2 %}{% render_table MayTable %}
                 </div>
             </div>
         </div>
@@ -100,7 +100,7 @@
                     <i class="fa fa-table"></i> Table showing June 2017/2018
                 </div>
                 <div class="card-block">
-
+                    {% load django_tables2 %}{% render_table JuneTable %}
                 </div>
             </div>
         </div>
