--- a/landing/templates/landing/Qthree.html
+++ b/landing/templates/landing/Qthree.html
@@ -79,7 +79,7 @@
                     <i class="fa fa-table"></i> Table showing January 2017/2018
                 </div>
                 <div class="card-block">
-
+                    {% load django_tables2 %}{% render_table JanuaryTable %}
                 </div>
             </div>
         </div>
@@ -90,7 +90,7 @@
                     <i class="fa fa-table"></i> Table showing February 2017/2018
                 </div>
                 <div class="card-block">
-
+                    {% load django_tables2 %}{% render_table FebruaryTable %}
                 </div>
             </div>
         </div>
@@ -100,7 +100,7 @@
                     <i class="fa fa-table"></i> Table showing March 2017/2018
                 </div>
                 <div class="card-block">
-
+                    {% load django_tables2 %}{% render_table MarchTable %}
                 </div>
             </div>
         </div>
