--- a/landing/templates/landing/Qtwo.html
+++ b/landing/templates/landing/Qtwo.html
@@ -79,7 +79,7 @@
                     <i class="fa fa-table"></i> Table showing October 2017/2018
                 </div>
                 <div class="card-block">
-
+                    {% load django_tables2 %}{% render_table OctoberTable %}
                 </div>
             </div>
         </div>
@@ -90,7 +90,7 @@
                     <i class="fa fa-table"></i> Table showing November 2017/2018
                 </div>
                 <div class="card-block">
-
+                    {% load django_tables2 %}{% render_table NovemberTable %}
                 </div>
             </div>
         </div>
@@ -100,7 +100,7 @@
                     <i class="fa fa-table"></i> Table showing December 2017/2018
                 </div>
                 <div class="card-block">
-
+                    {% load django_tables2 %}{% render_table DecemberTable %}
                 </div>
             </div>
         </div>
