End of Work thursday 22 June

--- a/landing/templates/landing/projects.html
+++ b/landing/templates/landing/projects.html
@@ -121,12 +121,27 @@
                 </div>
             </div>
         </div>
-        <div class="card mb-3">
-            <div class="card-header">
-                <i class="fa fa-map"></i> Map of Uganda Showing Districts and their population densities
+        <div class="row">
+            <div class="col-lg-7">
+                <div class="card mb-3" display="inline-block">
+                    <div class="card-header">
+                        <i class="fa fa-map"></i> Map of Uganda Showing Districts and their population densities
+                    </div>
+                    <div class="card-block">
+                        <div id="container"></div>
+                    </div>
+                </div>
             </div>
-            <div class="card-block">
-                <div id="container"></div>
+
+            <div class="col-lg-5">
+                <div class="card mb-3" style="width: 99.5%;">
+                    <div class="card-header">
+                        <i class="fa fa-list"></i> List Showing selected District project details
+                    </div>
+                    <div class="card-block">
+
+                    </div>
+                </div>
             </div>
         </div>
         <!--This is where you start-->
