--- a/landing/templates/registration/login.html
+++ b/landing/templates/registration/login.html
@@ -3,6 +3,7 @@
 <html lang="en">
 
 <head>
+  {% load static %}
   <title>P.B.M.S login page</title>
   <!-- CSS for the login card -->
   <link href="/static/css/loging.css" rel="stylesheet" type="text/css">
